# RoMa

./: pyproject.toml  requirements-local.txt
src/roma/: __init__.py
src/roma/models/: matcher.py
src/roma/models/model_zoo/: __init__.py
